--- a/sae-fahrzeugliste/sae-fahrzeugliste.vcxproj
+++ b/sae-fahrzeugliste/sae-fahrzeugliste.vcxproj
@@ -153,6 +153,10 @@
   <ItemGroup>
     <ClCompile Include="sae-fahrzeugliste.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
